src/test/deca/extension/codegen/invalid/result/test_acces_negatif_output_no_check.res
  ** IMA ** ERREUR ** Ligne 33 : 
    STORE : Pas une adresse memoire
